<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cocktails</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_cocktail_1">Cranberry Ginger Fizz</string>
    <string name="title_cocktail_2">Whiskey Sour</string>
    <string name="title_cocktail_3">Aperol Spritz</string>
    <string name="title_cocktail_4">Perfect Margarita</string>
    <string name="title_cocktail_5">French 75</string>
	
	<color name="bg_color">#000000</color>
	<color name="txt_color">#fffcfc</color>
	<color name="txt_highlight_color">#f9912f</color>
    
</resources>